# walkie-agent-v2

./: .gitignore  app.py  main.py  pyproject.toml
api/: __init__.py  utils.py
api/routes/: image_caption.py  image_embed.py  object_detection.py  pose_estimation.py  stt.py  tts.py
models/: .gitignore
services/image_caption/: __init__.py  base.py  image_caption.py
services/image_caption/providers/: __init__.py  google_caption.py  paligemma.py
services/image_embed/: __init__.py  base.py  embedding.py
services/image_embed/providers/: __init__.py  clip.py
services/object_detection/: __init__.py  base.py  object_detection.py
services/object_detection/providers/: __init__.py  yolo.py
services/pose_estimation/: __init__.py  base.py  pose_estimation.py
services/pose_estimation/providers/: __init__.py  yolo_pose.py
services/stt/: __init__.py  base.py  stt.py
services/stt/providers/: __init__.py  google.py  whisper.py
services/tts/: __init__.py  base.py  tts.py
services/tts/providers/: __init__.py  elevenlabs.py  piper_tts.py
