[project]
name = "walkie-agent-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.2.1",
    "google-cloud-speech>=2.37.0",
    "google-genai>=1.68.0",
    "huggingface-hub>=1.7.2",
    "langchain>=1.2.13",
    "pillow>=12.1.1",
    "python-dotenv>=1.2.2",
    "transformers>=5.3.0",
    "ultralytics>=8.4.26",
]
